feat: add controller get profile client
